# WRAI.TH

./: .gitignore  .mcp.json  README.md  go.mod  go.sum  install.ps1  install.sh  main.go
.github/workflows/: release.yml  test-install.yml
client/: .gitignore  PLAN.md  config.example.yaml  pyproject.toml
client/src/: config.py  main.py
client/src/controller/: __init__.py  manager.py  output_buffer.py  session.py
client/src/discord_bridge/: bot.py  commands.py  formatter.py  onboarding.py  router.py
client/src/monitor/: db.py  tracker.py
client/src/relay/: __init__.py  client.py  models.py  sse.py
client/src/web/: server.py  ws.py
client/src/web/static/: index.html
client/src/web/static/css/: mission-control.css
client/src/web/static/js/: app.js
cmd/wraith/: main.go
internal/cli/: agents.go  cli.go  format.go  inbox.go  send.go  stats.go  status.go  thread.go
internal/client/: PLAN.md  boot.go  config.go  manager.go  relay.go  satellite_client.go  satellite_server.go  session.go  sse.go
internal/dashboard/: server.go
internal/db/: agents.go  boards.go  conversations.go  db.go  goals.go  memories.go  messages.go  orgs.go  profiles.go  projects.go  stats.go  tasks.go  vault.go  web_queries.go
internal/discord/: bot.go  commands.go  onboarding.go  router.go
internal/ingest/: detector.go  events.go  hooks.go  ingest.go  mapper.go
internal/models/: agent.go  memory.go  message.go  org.go  profile.go  project.go  task.go  vault.go
internal/monitor/: tracker.go
internal/relay/: api.go  cleanup.go  context.go  handlers.go  (+3 more)
skill/: relay.md
(+22 files in other folders)
